<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="heading">Welcome to Tic-Tac-Toe</string>
    <string name="grid">Our main grid</string>
    <string name="turn">Player-1\'s Turn - Tap to play</string>
    <string name="turn1">Player-2\'s Turn - Tap to play</string>
    <string name="play_again">Restart to play again</string>
    <string name="draw">Draw Match - Restart to play again</string>
    <string name="win">Player-2 has won - Restart to play again</string>
    <string name="win1">Player-1 has won - Restart to play again</string>
    <string name="player_2_s_score_0">Player-2\'s Score: </string>
    <string name="player_1_s_score_0">Player-1\'s Score: </string>
    <string name="restart">Restart</string>
    <string name="exit">EXIT</string>
</resources>